# roogle

./: .gitignore  Cargo.toml  README.md  flake.nix
src/: cli.rs  common.rs  lib.rs  main.rs
src/parse/: files.rs  items.rs  mod.rs
