[package]
name = "roogle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.3.23", features = ["derive"] }
distance = "0.4.0"
env_logger = "0.10.0"
log = "0.4.20"
syn = { version = "2.0.29", features = ["full"] }
